[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "code-review-env"
version = "1.0.0"
description = "A real-world code review OpenEnv environment"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn==0.29.0",
    "pydantic==2.6.4",
    "openai==1.30.0",
]

[project.optional-dependencies]
dev = ["openenv-core"]

[tool.openenv]
env_class = "CodeReviewEnv"
env_module = "env"
tasks = ["easy", "medium", "hard"]
